# gps

./: .gitignore  .pylintrc  LICENSE  README.md  analyze.py  compile_proto.sh  gps  peg_blind_big_success.txt  peg_success.txt  policy_opt_tf_test.py  run_seeds.sh  test_file.py  tf_tests.py
debug/: badmm.txt  lqr.txt  mdgps_lqr_const.txt  mdgps_lqr_lqr_lqr.txt  mdgps_lqr_nn_lqr.txt  mdgps_nn_const.txt  mdgps_nn_nn_lqr.txt  mdgps_nn_nn_nn.txt
docs/: Makefile  autogen_hyperparams.py  bibtex.md  commands_to_get_pr2_on_gazebo  conf.py  deploy_instructions.txt  faq.md  gui.md  hyperparams.md  index.md  toctree.rst  usage.md
experiments/badmm_2_cond/: hyperparams.py
experiments/badmm_peg_big/: hyperparams.py
experiments/badmm_seed_0/: hyperparams.py
experiments/badmm_seed_1/: hyperparams.py
experiments/badmm_seed_2/: hyperparams.py
experiments/badmm_square_peg/: hyperparams.py
experiments/box2d_arm_example/: hyperparams.py
experiments/box2d_badmm_example/: hyperparams.py
experiments/box2d_pointmass_example/: hyperparams.py
experiments/box2d_pointmass_pi2_example/: hyperparams.py
experiments/box2d_pointmass_pigps_example/: hyperparams.py
experiments/box2d_tensorflow_example/: hyperparams.py
experiments/cheetah_hop/: hyperparams.py
experiments/cheetah_hop_ioc/: hyperparams.py
experiments/cheetah_hop_mdgps/: hyperparams.py
experiments/cheetah_hop_run/: hyperparams.py
experiments/cheetah_hop_supervised/: hyperparams.py
experiments/debug_peg_blind/: hyperparams.py  plot.py
experiments/debug_reacher3/: hyperparams.py  plot.py
experiments/icra_peg_2D/: hyperparams.py
experiments/icra_peg_3D/: hyperparams.py
experiments/icra_peg_vision/: hyperparams.py
experiments/icra_reacher/: hyperparams.py
experiments/icra_reacher_vision/: hyperparams.py
experiments/lqr_2_cond/: hyperparams.py
experiments/lqr_seed_0/: hyperparams.py
experiments/lqr_seed_1/: hyperparams.py
experiments/lqr_seed_2/: hyperparams.py
experiments/mdgps_2_cond/: hyperparams.py
experiments/mdgps_peg_big/: hyperparams.py
experiments/mdgps_seed_0/: hyperparams.py
mjc_models/: 3link_gripper_pusher.xml  4link_gripper_push.xml  4link_gripper_strike.xml  arm_3link_reach.xml  humanoid.xml  obstacle_course.xml  particle2d.xml  particle2d_obstacle.xml  pointmass.xml  pointmass_disc_cost.xml  pr2_arm3d.xml  pr2_arm3d_door.xml  pr2_arm3d_large_table.xml  pr2_arm3d_no_table.xml  pr2_arm3d_old_mjc.xml  pr2_arm3d_square_peg.xml  pr2_gripping.xml  reacher.xml  reacher3.xml  reacher_img.xml  rollingball.xml
python/: __init__.py
src/gps_agent_pkg/: .gitignore  CMakeLists.txt  controller_plugins.xml  encoder_filter_params.txt  manifest.xml
src/gps_agent_pkg/include/gps_agent_pkg/: caffenncontroller.h  camerasensor.h  controller.h  encoderfilter.h  encodersensor.h  lingausscontroller.h  neuralnetwork.h  neuralnetworkcaffe.h  options.h  positioncontroller.h  pr2plugin.h  robotplugin.h  rostopicsensor.h  sample.h  sensor.h  tfcontroller.h  trialcontroller.h  util.h
src/gps_agent_pkg/launch/: kinect_publish.launch  pr2_gazebo.launch  pr2_gazebo_no_controller.launch  pr2_left_controller.yaml  pr2_only_controller.launch  pr2_real.launch
src/gps_agent_pkg/msg/: CaffeParams.msg  ControllerParams.msg  DataRequest.msg  DataType.msg  LinGaussParams.msg  PositionCommand.msg  RelaxCommand.msg  SampleResult.msg  TfActionCommand.msg  TfObsData.msg  TfParams.msg  TrialCommand.msg
src/gps_agent_pkg/scripts/: pid_pub.py
src/gps_agent_pkg/src/: caffenncontroller.cpp  camerasensor.cpp  controller.cpp  encoderfilter.cpp  encodersensor.cpp  lingausscontroller.cpp  neuralnetwork.cpp  neuralnetworkcaffe.cpp  positioncontroller.cpp  pr2plugin.cpp  robotplugin.cpp  rostopicsensor.cpp  sample.cpp  sensor.cpp  tfcontroller.cpp  trialcontroller.cpp  util.cpp
src/gps_agent_pkg/test/: check_jac.py  issue_pos.py  run_train.py
tests/: policy_opt_tf_test.py
(+301 files in other folders)
